wasm96-c-sdk/wasm96.h

// Low-level raw ABI imports.
extern void wasm96_graphics_set_size(uint32_t width, uint32_t height) WASM96_WASM_IMPORT("env", "wasm96_graphics_set_size");
extern void wasm96_graphics_set_color(uint32_t r, uint32_t g, uint32_t b, uint32_t a) WASM96_WASM_IMPORT("env", "wasm96_graphics_set_color");
extern void wasm96_graphics_background(uint32_t r, uint32_t g, uint32_t b) WASM96_WASM_IMPORT("env", "wasm96_graphics_background");
extern void wasm96_graphics_point(int32_t x, int32_t y) WASM96_WASM_IMPORT("env", "wasm96_graphics_point");
extern void wasm96_graphics_line(int32_t x1, int32_t y1, int32_t x2, int32_t y2) WASM96_WASM_IMPORT("env", "wasm96_graphics_line");
extern void wasm96_graphics_rect(int32_t x, int32_t y, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_rect");
extern void wasm96_graphics_rect_outline(int32_t x, int32_t y, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_rect_outline");
extern void wasm96_graphics_circle(int32_t x, int32_t y, uint32_t r) WASM96_WASM_IMPORT("env", "wasm96_graphics_circle");
extern void wasm96_graphics_circle_outline(int32_t x, int32_t y, uint32_t r) WASM96_WASM_IMPORT("env", "wasm96_graphics_circle_outline");
extern void wasm96_graphics_image(int32_t x, int32_t y, uint32_t w, uint32_t h, const uint8_t* data, uint32_t len) WASM96_WASM_IMPORT("env", "wasm96_graphics_image");
extern void wasm96_graphics_image_png(int32_t x, int32_t y, const uint8_t* data, uint32_t len) WASM96_WASM_IMPORT("env", "wasm96_graphics_image_png");
extern void wasm96_graphics_image_jpeg(int32_t x, int32_t y, const uint8_t* data, uint32_t len) WASM96_WASM_IMPORT("env", "wasm96_graphics_image_jpeg");
extern void wasm96_graphics_ellipse(int32_t cx, int32_t cy, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_ellipse");
extern void wasm96_graphics_arc(int32_t cx, int32_t cy, uint32_t w, uint32_t h, float start, float end) WASM96_WASM_IMPORT("env", "wasm96_graphics_arc");
extern void wasm96_graphics_quad(int32_t x1, int32_t y1, int32_t x2, int32_t y2, int32_t x3, int32_t y3, int32_t x4, int32_t y4) WASM96_WASM_IMPORT("env", "wasm96_graphics_quad");
extern void wasm96_graphics_triangle(int32_t x1, int32_t y1, int32_t x2, int32_t y2, int32_t x3, int32_t y3) WASM96_WASM_IMPORT("env", "wasm96_graphics_triangle");
extern void wasm96_graphics_triangle_outline(int32_t x1, int32_t y1, int32_t x2, int32_t y2, int32_t x3, int32_t y3) WASM96_WASM_IMPORT("env", "wasm96_graphics_triangle_outline");
extern void wasm96_graphics_bezier_quadratic(int32_t x1, int32_t y1, int32_t cx, int32_t cy, int32_t x2, int32_t y2, uint32_t segments) WASM96_WASM_IMPORT("env", "wasm96_graphics_bezier_quadratic");
extern void wasm96_graphics_bezier_cubic(int32_t x1, int32_t y1, int32_t cx1, int32_t cy1, int32_t cx2, int32_t cy2, int32_t x2, int32_t y2, uint32_t segments) WASM96_WASM_IMPORT("env", "wasm96_graphics_bezier_cubic");
extern void wasm96_graphics_pill(int32_t x, int32_t y, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_pill");
extern void wasm96_graphics_pill_outline(int32_t x, int32_t y, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_pill_outline");
extern void wasm96_graphics_apply_matrix(float m00, float m01, float m02, float m03, float m10, float m11, float m12, float m13, float m20, float m21, float m22, float m23, float m30, float m31, float m32, float m33) WASM96_WASM_IMPORT("env", "wasm96_graphics_apply_matrix");
extern void wasm96_graphics_reset_matrix(void) WASM96_WASM_IMPORT("env", "wasm96_graphics_reset_matrix");
extern void wasm96_graphics_rotate(float angle) WASM96_WASM_IMPORT("env", "wasm96_graphics_rotate");
extern void wasm96_graphics_rotate_x(float angle) WASM96_WASM_IMPORT("env", "wasm96_graphics_rotate_x");
extern void wasm96_graphics_rotate_y(float angle) WASM96_WASM_IMPORT("env", "wasm96_graphics_rotate_y");
extern void wasm96_graphics_rotate_z(float angle) WASM96_WASM_IMPORT("env", "wasm96_graphics_rotate_z");
extern void wasm96_graphics_scale(float sx, float sy, float sz) WASM96_WASM_IMPORT("env", "wasm96_graphics_scale");
extern void wasm96_graphics_shear_x(float angle) WASM96_WASM_IMPORT("env", "wasm96_graphics_shear_x");
extern void wasm96_graphics_shear_y(float angle) WASM96_WASM_IMPORT("env", "wasm96_graphics_shear_y");
extern void wasm96_graphics_translate(float x, float y, float z) WASM96_WASM_IMPORT("env", "wasm96_graphics_translate");
extern void wasm96_graphics_push_matrix(void) WASM96_WASM_IMPORT("env", "wasm96_graphics_push_matrix");
extern void wasm96_graphics_pop_matrix(void) WASM96_WASM_IMPORT("env", "wasm96_graphics_pop_matrix");
// 3D Graphics
extern void wasm96_graphics_set_3d(uint32_t enable) WASM96_WASM_IMPORT("env", "wasm96_graphics_set_3d");
extern void wasm96_graphics_camera_look_at(float eye_x, float eye_y, float eye_z, float target_x, float target_y, float target_z, float up_x, float up_y, float up_z) WASM96_WASM_IMPORT("env", "wasm96_graphics_camera_look_at");
extern void wasm96_graphics_camera_perspective(float fovy, float aspect, float near, float far) WASM96_WASM_IMPORT("env", "wasm96_graphics_camera_perspective");
extern uint32_t wasm96_graphics_mesh_create(uint64_t key, const float* v_ptr, uint32_t v_len, const uint32_t* i_ptr, uint32_t i_len) WASM96_WASM_IMPORT("env", "wasm96_graphics_mesh_create");
extern uint32_t wasm96_graphics_mesh_create_obj(uint64_t key, const uint8_t* ptr, uint32_t len) WASM96_WASM_IMPORT("env", "wasm96_graphics_mesh_create_obj");
extern uint32_t wasm96_graphics_mesh_create_stl(uint64_t key, const uint8_t* ptr, uint32_t len) WASM96_WASM_IMPORT("env", "wasm96_graphics_mesh_create_stl");
extern void wasm96_graphics_mesh_draw(uint64_t key, float x, float y, float z, float rx, float ry, float rz, float sx, float sy, float sz) WASM96_WASM_IMPORT("env", "wasm96_graphics_mesh_draw");
extern uint32_t wasm96_graphics_mesh_set_texture(uint64_t mesh_key, uint64_t image_key) WASM96_WASM_IMPORT("env", "wasm96_graphics_mesh_set_texture");
// Materials / textures (OBJ+MTL workflows)
// Given an `.mtl` file bytes + one encoded texture blob (PNG/JPEG) + its filename,
// the host will decode and register the texture under `texture_key` *iff* the filename
// appears as a `map_Kd` entry in the provided `.mtl`. Returns 1 on success, 0 otherwise.
extern uint32_t wasm96_graphics_mtl_register_texture(
    uint64_t texture_key,
    const uint8_t* mtl_ptr,
    uint32_t mtl_len,
    const uint8_t* tex_filename_ptr,
    uint32_t tex_filename_len,
    const uint8_t* tex_ptr,
    uint32_t tex_len
) WASM96_WASM_IMPORT("env", "wasm96_graphics_mtl_register_texture");
extern uint32_t wasm96_graphics_svg_register(uint64_t key, const uint8_t* data_ptr, uint32_t data_len) WASM96_WASM_IMPORT("env", "wasm96_graphics_svg_register");
extern void wasm96_graphics_svg_draw_key(uint64_t key, int32_t x, int32_t y, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_svg_draw_key");
extern void wasm96_graphics_svg_unregister(uint64_t key) WASM96_WASM_IMPORT("env", "wasm96_graphics_svg_unregister");
extern uint32_t wasm96_graphics_gif_register(uint64_t key, const uint8_t* data_ptr, uint32_t data_len) WASM96_WASM_IMPORT("env", "wasm96_graphics_gif_register");
extern void wasm96_graphics_gif_draw_key(uint64_t key, int32_t x, int32_t y) WASM96_WASM_IMPORT("env", "wasm96_graphics_gif_draw_key");
extern void wasm96_graphics_gif_draw_key_scaled(uint64_t key, int32_t x, int32_t y, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_gif_draw_key_scaled");
extern void wasm96_graphics_gif_unregister(uint64_t key) WASM96_WASM_IMPORT("env", "wasm96_graphics_gif_unregister");
extern uint32_t wasm96_graphics_png_register(uint64_t key, const uint8_t* data_ptr, uint32_t data_len) WASM96_WASM_IMPORT("env", "wasm96_graphics_png_register");
extern void wasm96_graphics_png_draw_key(uint64_t key, int32_t x, int32_t y) WASM96_WASM_IMPORT("env", "wasm96_graphics_png_draw_key");
extern void wasm96_graphics_png_draw_key_scaled(uint64_t key, int32_t x, int32_t y, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_png_draw_key_scaled");
extern void wasm96_graphics_png_unregister(uint64_t key) WASM96_WASM_IMPORT("env", "wasm96_graphics_png_unregister");
extern uint32_t wasm96_graphics_jpeg_register(uint64_t key, const uint8_t* data_ptr, uint32_t data_len) WASM96_WASM_IMPORT("env", "wasm96_graphics_jpeg_register");
extern void wasm96_graphics_jpeg_draw_key(uint64_t key, int32_t x, int32_t y) WASM96_WASM_IMPORT("env", "wasm96_graphics_jpeg_draw_key");
extern void wasm96_graphics_jpeg_draw_key_scaled(uint64_t key, int32_t x, int32_t y, uint32_t w, uint32_t h) WASM96_WASM_IMPORT("env", "wasm96_graphics_jpeg_draw_key_scaled");
// Math - Trigonometry
extern float wasm96_math_acos(float value) WASM96_WASM_IMPORT("env", "wasm96_math_acos");
extern float wasm96_math_asin(float value) WASM96_WASM_IMPORT("env", "wasm96_math_asin");
extern float wasm96_math_atan(float value) WASM96_WASM_IMPORT("env", "wasm96_math_atan");
extern float wasm96_math_atan2(float y, float x) WASM96_WASM_IMPORT("env", "wasm96_math_atan2");
extern float wasm96_math_cos(float angle) WASM96_WASM_IMPORT("env", "wasm96_math_cos");
extern float wasm96_math_sin(float angle) WASM96_WASM_IMPORT("env", "wasm96_math_sin");
extern float wasm96_math_tan(float angle) WASM96_WASM_IMPORT("env", "wasm96_math_tan");
extern float wasm96_math_degrees(float radians) WASM96_WASM_IMPORT("env", "wasm96_math_degrees");
extern float wasm96_math_radians(float degrees) WASM96_WASM_IMPORT("env", "wasm96_math_radians");
// Math - Random & Noise
extern float wasm96_math_random(float min, float max) WASM96_WASM_IMPORT("env", "wasm96_math_random");
extern void wasm96_math_random_seed(uint32_t seed) WASM96_WASM_IMPORT("env", "wasm96_math_random_seed");
extern float wasm96_math_random_gaussian(float mean, float sd) WASM96_WASM_IMPORT("env", "wasm96_math_random_gaussian");
extern float wasm96_math_noise(float x, float y, float z) WASM96_WASM_IMPORT("env", "wasm96_math_noise");
extern void wasm96_math_noise_seed(uint32_t seed) WASM96_WASM_IMPORT("env", "wasm96_math_noise_seed");
extern void wasm96_math_noise_detail(uint32_t lod, float falloff) WASM96_WASM_IMPORT("env", "wasm96_math_noise_detail");