wasm96-zig-sdk/src/main.zig


    // Math - Trigonometry
    extern fn wasm96_math_acos(value: f32) f32;
    extern fn wasm96_math_asin(value: f32) f32;
    extern fn wasm96_math_atan(value: f32) f32;
    extern fn wasm96_math_atan2(y: f32, x: f32) f32;
    extern fn wasm96_math_cos(angle: f32) f32;
    extern fn wasm96_math_sin(angle: f32) f32;
    extern fn wasm96_math_tan(angle: f32) f32;
    extern fn wasm96_math_degrees(radians: f32) f32;
    extern fn wasm96_math_radians(degrees: f32) f32;

    // Math - Random & Noise
    extern fn wasm96_math_random(min: f32, max: f32) f32;
    extern fn wasm96_math_random_seed(seed: u32) void;
    extern fn wasm96_math_random_gaussian(mean: f32, sd: f32) f32;
    extern fn wasm96_math_noise(x: f32, y: f32, z: f32) f32;
    extern fn wasm96_math_noise_seed(seed: u32) void;
    extern fn wasm96_math_noise_detail(lod: u32, falloff: f32) void;
};

/// Graphics API.
pub const graphics = struct {
    fn hashKey(key: []const u8) u64 {
        var hash: u64 = 0xcbf29ce484222325;
        for (key) |byte| {
            hash ^= byte;
            hash *%= 0x100000001b3;
        }
        return hash;
    }

    /// Set the screen dimensions.
    pub fn setSize(width: u32, height: u32) void {
        sys.wasm96_graphics_set_size(width, height);
    }

    /// Set the current drawing color (RGBA).
    pub fn setColor(r: u8, g: u8, b: u8, a: u8) void {
        sys.wasm96_graphics_set_color(@as(u32, r), @as(u32, g), @as(u32, b), @as(u32, a));
    }

    /// Clear the screen with a specific color (RGB).
    pub fn background(r: u8, g: u8, b: u8) void {
        sys.wasm96_graphics_background(@as(u32, r), @as(u32, g), @as(u32, b));
    }

    /// Draw a single pixel at (x, y).
    pub fn point(x: i32, y: i32) void {
        sys.wasm96_graphics_point(x, y);
    }

    /// Draw a line from (x1, y1) to (x2, y2).
    pub fn line(x1: i32, y1: i32, x2: i32, y2: i32) void {
        sys.wasm96_graphics_line(x1, y1, x2, y2);
    }

    /// Draw a filled rectangle.
    pub fn rect(x: i32, y: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_rect(x, y, w, h);
    }

    /// Draw a rectangle outline.
    pub fn rectOutline(x: i32, y: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_rect_outline(x, y, w, h);
    }

    /// Draw a filled circle.
    pub fn circle(x: i32, y: i32, r: u32) void {
        sys.wasm96_graphics_circle(x, y, r);
    }

    /// Draw a circle outline.
    pub fn circleOutline(x: i32, y: i32, r: u32) void {
        sys.wasm96_graphics_circle_outline(x, y, r);
    }

    /// Draw an image/sprite.
    /// `data` is a slice of RGBA bytes (4 bytes per pixel).
    pub fn image(x: i32, y: i32, w: u32, h: u32, data: []const u8) void {
        sys.wasm96_graphics_image(x, y, w, h, data.ptr, data.len);
    }

    /// Draw an image from raw PNG bytes.
    pub fn imagePng(x: i32, y: i32, data: []const u8) void {
        sys.wasm96_graphics_image_png(x, y, data.ptr, data.len);
    }

    pub fn imageJpeg(x: i32, y: i32, data: []const u8) void {
        sys.wasm96_graphics_image_jpeg(x, y, data.ptr, data.len);
    }

    /// Draw a filled ellipse centered at (cx, cy) with width w and height h.
    pub fn ellipse(cx: i32, cy: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_ellipse(cx, cy, w, h);
    }

    /// Draw an arc centered at (cx, cy) with width w and height h, from start to end (radians).
    pub fn arc(cx: i32, cy: i32, w: u32, h: u32, start: f32, end: f32) void {
        sys.wasm96_graphics_arc(cx, cy, w, h, start, end);
    }

    /// Draw a filled quad using two triangles.
    pub fn quad(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, x4: i32, y4: i32) void {
        sys.wasm96_graphics_quad(x1, y1, x2, y2, x3, y3, x4, y4);
    }

    /// Draw a filled triangle.
    pub fn triangle(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32) void {
        sys.wasm96_graphics_triangle(x1, y1, x2, y2, x3, y3);
    }

    /// Draw a triangle outline.
    pub fn triangleOutline(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32) void {
        sys.wasm96_graphics_triangle_outline(x1, y1, x2, y2, x3, y3);
    }

    /// Draw a quadratic Bezier curve.
    pub fn bezierQuadratic(x1: i32, y1: i32, cx: i32, cy: i32, x2: i32, y2: i32, segments: u32) void {
        sys.wasm96_graphics_bezier_quadratic(x1, y1, cx, cy, x2, y2, segments);
    }

    /// Draw a cubic Bezier curve.
    pub fn bezierCubic(x1: i32, y1: i32, cx1: i32, cy1: i32, cx2: i32, cy2: i32, x2: i32, y2: i32, segments: u32) void {
        sys.wasm96_graphics_bezier_cubic(x1, y1, cx1, cy1, cx2, cy2, x2, y2, segments);
    }

    /// Draw a filled pill.
    pub fn pill(x: i32, y: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_pill(x, y, w, h);
    }

    /// Draw a pill outline.
    pub fn pillOutline(x: i32, y: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_pill_outline(x, y, w, h);
    }

    pub fn applyMatrix(m00: f32, m01: f32, m02: f32, m03: f32, m10: f32, m11: f32, m12: f32, m13: f32, m20: f32, m21: f32, m22: f32, m23: f32, m30: f32, m31: f32, m32: f32, m33: f32) void {
        sys.wasm96_graphics_apply_matrix(m00, m01, m02, m03, m10, m11, m12, m13, m20, m21, m22, m23, m30, m31, m32, m33);
    }

    pub fn resetMatrix() void {
        sys.wasm96_graphics_reset_matrix();
    }

    pub fn rotate(angle: f32) void {
        sys.wasm96_graphics_rotate(angle);
    }

    pub fn rotateX(angle: f32) void {
        sys.wasm96_graphics_rotate_x(angle);
    }

    pub fn rotateY(angle: f32) void {
        sys.wasm96_graphics_rotate_y(angle);
    }

    pub fn rotateZ(angle: f32) void {
        sys.wasm96_graphics_rotate_z(angle);
    }

    pub fn scale(sx: f32, sy: f32, sz: f32) void {
        sys.wasm96_graphics_scale(sx, sy, sz);
    }

    pub fn shearX(angle: f32) void {
        sys.wasm96_graphics_shear_x(angle);
    }

    pub fn shearY(angle: f32) void {
        sys.wasm96_graphics_shear_y(angle);
    }

    pub fn translate(x: f32, y: f32, z: f32) void {
        sys.wasm96_graphics_translate(x, y, z);
    }

    pub fn pushMatrix() void {
        sys.wasm96_graphics_push_matrix();
    }

    pub fn popMatrix() void {
        sys.wasm96_graphics_pop_matrix();
    }

    // 3D Graphics
    // =========================

    /// Enable or disable 3D rendering mode.
    pub fn set3d(enable: bool) void {
        sys.wasm96_graphics_set_3d(@intFromBool(enable));
    }

    /// Set the camera view matrix using look-at parameters.
    pub fn cameraLookAt(eye_x: f32, eye_y: f32, eye_z: f32, target_x: f32, target_y: f32, target_z: f32, up_x: f32, up_y: f32, up_z: f32) void {
        sys.wasm96_graphics_camera_look_at(eye_x, eye_y, eye_z, target_x, target_y, target_z, up_x, up_y, up_z);
    }

    /// Set the camera projection matrix.
    pub fn cameraPerspective(fovy: f32, aspect: f32, near: f32, far: f32) void {
        sys.wasm96_graphics_camera_perspective(fovy, aspect, near, far);
    }

    /// Create a mesh from raw vertex data.
    /// Vertices are [x, y, z, u, v, nx, ny, nz] (8 floats).
    /// Returns true on success.
    pub fn meshCreate(key: []const u8, vertices: []const f32, indices: []const u32) bool {
        return sys.wasm96_graphics_mesh_create(hashKey(key), vertices.ptr, vertices.len, indices.ptr, indices.len) != 0;
    }

    /// Create a mesh from OBJ source text.
    /// Returns true on success.
    pub fn meshCreateObj(key: []const u8, data: []const u8) bool {
        return sys.wasm96_graphics_mesh_create_obj(hashKey(key), data.ptr, data.len) != 0;
    }

    /// Create a mesh from STL binary data.
    /// Returns true on success.
    pub fn meshCreateStl(key: []const u8, data: []const u8) bool {
        return sys.wasm96_graphics_mesh_create_stl(hashKey(key), data.ptr, data.len) != 0;
    }

    /// Draw a mesh instance.
    /// Rotation is Euler angles in radians (x, y, z).
    pub fn meshDraw(key: []const u8, x: f32, y: f32, z: f32, rx: f32, ry: f32, rz: f32, sx: f32, sy: f32, sz: f32) void {
        sys.wasm96_graphics_mesh_draw(hashKey(key), x, y, z, rx, ry, rz, sx, sy, sz);
    }

    /// Bind a keyed decoded image (PNG/JPEG) as the texture for a mesh.
    /// Returns true on success.
    ///
    /// Notes:
    /// - PNG alpha is respected (RGBA).
    /// - JPEG is treated as opaque (RGB), but may still be uploaded as RGBA with A=255 on host.
    pub fn meshSetTexture(meshKey: []const u8, imageKey: []const u8) bool {
        return sys.wasm96_graphics_mesh_set_texture(hashKey(meshKey), hashKey(imageKey)) != 0;
    }

    /// Register an SVG resource under a string key.
    /// Register an encoded texture referenced by an `.mtl` file (`map_Kd`) under `texture_key`.
    ///
    /// Returns `true` if it registered (filename matched + decode succeeded), else `false`.
    pub fn mtlRegisterTexture(textureKey: []const u8, mtlBytes: []const u8, texFilename: []const u8, texBytes: []const u8) bool {
        return sys.wasm96_graphics_mtl_register_texture(
            hashKey(textureKey),
            @as(u32, @intCast(@intFromPtr(mtlBytes.ptr))),
            @as(u32, @intCast(mtlBytes.len)),
            @as(u32, @intCast(@intFromPtr(texFilename.ptr))),
            @as(u32, @intCast(texFilename.len)),
            @as(u32, @intCast(@intFromPtr(texBytes.ptr))),
            @as(u32, @intCast(texBytes.len)),
        ) != 0;
    }

    pub fn svgRegister(key: []const u8, data: []const u8) bool {
        return sys.wasm96_graphics_svg_register(hashKey(key), data.ptr, data.len) != 0;
    }

    /// Draw a registered SVG by key.
    pub fn svgDrawKey(key: []const u8, x: i32, y: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_svg_draw_key(hashKey(key), x, y, w, h);
    }

    /// Unregister an SVG by key.
    pub fn svgUnregister(key: []const u8) void {
        sys.wasm96_graphics_svg_unregister(hashKey(key));
    }

    /// Register a GIF resource under a string key.
    pub fn gifRegister(key: []const u8, data: []const u8) bool {
        return sys.wasm96_graphics_gif_register(hashKey(key), data.ptr, data.len) != 0;
    }

    /// Draw a registered GIF by key at natural size.
    pub fn gifDrawKey(key: []const u8, x: i32, y: i32) void {
        sys.wasm96_graphics_gif_draw_key(hashKey(key), x, y);
    }

    /// Draw a registered GIF by key scaled.
    pub fn gifDrawKeyScaled(key: []const u8, x: i32, y: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_gif_draw_key_scaled(hashKey(key), x, y, w, h);
    }

    /// Unregister a GIF by key.
    pub fn gifUnregister(key: []const u8) void {
        sys.wasm96_graphics_gif_unregister(hashKey(key));
    }

    /// Register a PNG resource under a string key.
    pub fn mtlRegister(key: []const u8, data: []const u8) bool {
        return sys.wasm96_graphics_mtl_register(hashKey(key), data.ptr, data.len) != 0;
    }

    pub fn pngRegister(key: []const u8, data: []const u8) bool {
        return sys.wasm96_graphics_png_register(hashKey(key), data.ptr, data.len) != 0;
    }

    pub fn jpegRegister(key: []const u8, data: []const u8) bool {
        return sys.wasm96_graphics_jpeg_register(hashKey(key), data.ptr, data.len) != 0;
    }

    /// Draw a registered PNG by key at natural size.
    pub fn pngDrawKey(key: []const u8, x: i32, y: i32) void {
        sys.wasm96_graphics_png_draw_key(hashKey(key), x, y);
    }

    pub fn jpegDrawKey(key: []const u8, x: i32, y: i32) void {
        sys.wasm96_graphics_jpeg_draw_key(hashKey(key), x, y);
    }

    /// Draw a registered PNG by key scaled.
    pub fn pngDrawKeyScaled(key: []const u8, x: i32, y: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_png_draw_key_scaled(hashKey(key), x, y, w, h);
    }

    pub fn jpegDrawKeyScaled(key: []const u8, x: i32, y: i32, w: u32, h: u32) void {
        sys.wasm96_graphics_jpeg_draw_key_scaled(hashKey(key), x, y, w, h);
    }

    /// Unregister a PNG by key.
    pub fn pngUnregister(key: []const u8) void {
        sys.wasm96_graphics_png_unregister(hashKey(key));
    }
